guestbook/httproute-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: guestbook-internal
  namespace: guestbook
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - guestbook.i.shion1305.com
  rules:
    - backendRefs:
        - name: guestbook-ui
          port: 80
